<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        tools:context=".MainActivity"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo_ao_cadastro_shared_jobs"
            android:textSize="22dp"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            />
        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/vitor_pastore"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Switch
            android:id="@+id/switchEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Você deseja receber emails com atualizações de oportunidade?" />

        <EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/telefoneRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButtonResidencial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residencial" />

                <RadioButton
                    android:id="@+id/radioButtonComercial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comercial" />
            </RadioGroup>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Deseja adicionar o número celular?"
            android:onClick="onCheckBoxClicked"/>

        <EditText
            android:id="@+id/editTextTelefoneCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Celular"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="Data de nascimento"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/sexoRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/masculinoRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino" />

                <RadioButton
                    android:id="@+id/femininoRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feminno" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sua formação"
            android:textSize="22dp"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/spinnerFormacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formacao"/>

        <LinearLayout
            android:id="@+id/layoutFormacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="vertical" >



        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutModify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextDataFormatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_margin="5dp"
            android:hint="Data de formatura"/>
        <EditText
            android:id="@+id/editConclusaoAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_margin="5dp"
            android:hint="Ano de conclusão"/>
        <EditText
            android:id="@+id/editInstit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_margin="5dp"
            android:hint="Instituição"/>
        <EditText
            android:id="@+id/editMonografia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_margin="5dp"
            android:hint="Título de monografia"/>
        <EditText
            android:id="@+id/editOrientador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_margin="5dp"
            android:hint="Orientador"/>

    </LinearLayout>



        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="Escreva suas vagas de interesse"/>


        <Button
            android:id="@+id/limpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Limpar"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:onClick="onClickButton"/>

    </LinearLayout>

</ScrollView>

